# porthole

./: .gitignore  .sops.yaml  AGENTS.md  README.md  network.sops.yaml  pyproject.toml  pyrightconfig.json  setup.sh  skills-lock.json  spec-driven-development-example-01.txt
.agents/: execution-tracking.jsonl
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
ansible/: ansible.cfg  inventory.yml  prereqs.yml  site.yml
ansible/group_vars/: hub.yml
deploy/guacamole/: .env.example  Caddyfile  docker-compose.yml
docs/adr/: README.md  list-adrs.md
docs/bug/: list-bugs.md
docs/design/: list-designs.md
docs/epic/: README.md  list-epics.md
docs/journey/: README.md  list-journeys.md
docs/prd/: README.md  list-prds.md
docs/research/: README.md  list-research.md  (+1 more)
scripts/: tunnel-user-setup.sh
templates/: coredns-Corefile.j2  coredns-wg.zone.j2  guacamole-seed.sql.j2  hub-wg0.conf.j2  nftables.conf.j2  peer-wg0.conf.j2
terraform/: .terraform.lock.hcl  backend.tf  dns.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform-hetzner/: .terraform.lock.hcl  backend.tf  dns.tf  main.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py  conftest_tui.py  test_cli.py  test_keys.py  test_models.py  test_render.py  test_sops.py  test_ssh.py  test_state.py  test_subnet.py  test_tui_enrollment.py  test_tui_hub_check.py  test_tui_navigation.py  test_tui_prerequisites.py  test_tui_secrets.py  test_tui_service_install.py  test_tui_summary.py
(+215 files in other folders)
