[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porthole"
version = "0.1.0"
description = "WireGuard mesh management and interactive node enrollment for the Porthole fleet"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "textual>=0.70.0",
]

[project.scripts]
wgmesh = "wgmesh.cli:cli"
porthole-setup = "porthole_setup.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wgmesh", "src/porthole_setup"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
